tests/NormalTests/paczka1/small_fuzzy/12848799.err
Error in line 10: 8GnvM S823 84,9
Error in line 13: tInR S82c c6,0
